fix: slack notify secret handling

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,10 +103,14 @@ jobs:
     needs: [build-deploy-static, deploy-api]
     env:
       DEPLOY_ENV: ${{ inputs.environment || (github.ref_name == 'main' && 'prod' || github.ref_name == 'staging' && 'staging' || 'dev') }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
       - name: Notify Slack
-        if: ${{ secrets.SLACK_WEBHOOK_URL != '' }}
         run: |
+          if [ -z "$SLACK_WEBHOOK_URL" ]; then
+            echo "SLACK_WEBHOOK_URL is not set; skipping notification."
+            exit 0
+          fi
           status="success"
           if [ "${{ needs.build-deploy-static.result }}" != "success" ] || [ "${{ needs.deploy-api.result }}" != "success" ]; then
             status="failure"
@@ -177,4 +181,4 @@ jobs:
           }
           EOF
           )
-          curl -X POST -H 'Content-type: application/json' --data "$payload" "${{ secrets.SLACK_WEBHOOK_URL }}"
+          curl -X POST -H 'Content-type: application/json' --data "$payload" "$SLACK_WEBHOOK_URL"
